# sentinel-driver

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  GOVERNANCE.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  clippy.toml  codecov.yml  release-please-config.json  sonar-project.properties
.githooks/: pre-commit
.github/: labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  claude.yml  compat-matrix.yml  coverage.yml  labeler.yml  postgresql.yml  pr-automation.yml  pr-issue-link.yml  publish-crates.yml  release-please.yml  release.yml  semver-checks.yml  sonar.yml
benches/: driver_bench.rs
crates/sentinel-derive/: CHANGELOG.md  Cargo.toml  README.md
crates/sentinel-derive/src/: lib.rs
crates/sentinel-driver/: CHANGELOG.md  Cargo.toml  README.md
crates/sentinel-driver/src/: advisory_lock.rs  cancel.rs  config.rs  error.rs  generic_client.rs  lib.rs  observability.rs  portal.rs  row.rs  stream.rs
crates/sentinel-driver/src/auth/: md5.rs  mod.rs  scram.rs
crates/sentinel-driver/src/cache/: mod.rs
crates/sentinel-driver/src/connection/: client.rs  copy_impl.rs  mod.rs  notify_impl.rs  pipeline_impl.rs  portal_impl.rs  prepare.rs  query.rs  startup.rs  stream.rs  stream_impl.rs  transaction_impl.rs
crates/sentinel-driver/src/copy/: mod.rs  text.rs
crates/sentinel-driver/src/notify/: mod.rs
crates/sentinel-driver/src/pipeline/: batch.rs  mod.rs
crates/sentinel-driver/src/pool/: config.rs  health.rs  mod.rs
crates/sentinel-driver/src/protocol/: codec.rs  frontend.rs  mod.rs
crates/sentinel-driver/src/tls/: mod.rs
crates/sentinel-driver/src/types/: bit.rs  builtin.rs  cube.rs  decode.rs  encode.rs  geometric.rs  hstore.rs  interval.rs  json.rs  lsn.rs  ltree.rs  mod.rs  money.rs  multirange.rs  network.rs  numeric.rs  oid.rs  range.rs  time_support.rs  timetz.rs  traits.rs  xml.rs
crates/sentinel-driver/tests/: ui_tests.rs
crates/sentinel-driver/tests/ui/: error_exhaustive_fail.rs  error_exhaustive_fail.stderr
derive/: Cargo.toml
derive/src/: lib.rs
docs/plans/: 2026-04-03-sentinel-driver-design.md  2026-04-04-project-infrastructure-design.md  2026-04-04-project-infrastructure-plan.md  2026-04-05-crates-restructure-plan.md  2026-04-05-phase1-array-healthcheck-design.md  2026-04-05-phase1-implementation-plan.md  2026-04-05-phase2-cancel-timeout-design.md  2026-04-05-phase2-implementation-plan.md  2026-04-05-release-pipeline-plan.md  2026-04-06-codebase-refactoring-design.md  2026-04-06-codebase-refactoring-plan.md  2026-04-06-derive-expansion-plan.md  2026-04-06-feature-expansion-design.md  2026-04-06-phase1a-types-plan.md  2026-04-06-phase1c-bit-varbit-design.md  2026-04-06-phase2a-row-streaming-design.md  2026-04-06-phase2b-pool-callbacks-design.md  2026-04-08-phase2c-portal-cursor-design.md  2026-04-10-phase3a-tls-auth-completion-design.md  2026-04-15-phase4a-protocol-gaps-design.md  2026-04-15-phase4b-missing-types-design.md  2026-04-15-phase4c-enterprise-ha-design.md  2026-04-17-phase4d-ecosystem-types-design.md
sentinel-driver-derive/src/: lib.rs
src/: config.rs  error.rs  lib.rs  row.rs  statement.rs  transaction.rs
src/auth/: md5.rs  mod.rs  scram.rs
src/cache/: mod.rs
src/connection/: mod.rs  startup.rs  stream.rs
src/copy/: binary.rs  mod.rs  text.rs
src/notify/: channel.rs  mod.rs
src/pipeline/: batch.rs  mod.rs
src/pool/: config.rs  mod.rs
src/protocol/: backend.rs  codec.rs  frontend.rs  mod.rs
src/tls/: mod.rs
src/types/: builtin.rs  decode.rs  encode.rs  mod.rs
tests/: docker-compose.yml
tests/certs/: test-client.crt  test-client.key
tests/core/: advisory_lock.rs  cache.rs  cancel.rs  config.rs  copy_binary.rs  copy_text.rs  derive_enum.rs  hstore.rs  mod.rs  observability.rs  pool_callbacks.rs  pool_health.rs  portal.rs  protocol_backend.rs  protocol_frontend.rs  row.rs  security.rs  statement.rs  transaction.rs  types_bit.rs  types_builtin.rs  types_decode.rs  types_encode.rs  types_geometric.rs  types_interval.rs  types_misc.rs  types_network.rs  types_numeric.rs  types_range.rs
tests/core/auth/: md5.rs  mod.rs  scram.rs
tests/core/copy/: mod.rs
tests/core/derive/: composite.rs  domain.rs  from_row.rs  mod.rs
tests/core/notify/: channel.rs  helpers.rs  mod.rs
tests/core/pipeline/: batch.rs  encode.rs  mod.rs
tests/core/pool/: config.rs  deref.rs  health.rs  metrics.rs  mod.rs
tests/core/protocol/: codec.rs  mod.rs
tests/core/types/: builtin.rs  cube.rs  decode.rs  encode.rs  geometric.rs  json.rs  lsn.rs  ltree.rs  macaddr8.rs  mod.rs  money.rs  multirange.rs  network.rs  time_support.rs  timetz.rs  xml.rs
tests/postgres/: array_nullable.rs  mod.rs  setup.sql  stream.rs
