[workspace]
resolver = "2"
members = [
    "crates/sentinel-driver",
    "crates/sentinel-derive",
]

[workspace.lints.clippy]
# FORBID — cannot be #[allow]'d
unwrap_used = "forbid"
dbg_macro = "forbid"
todo = "forbid"
unimplemented = "forbid"
print_stdout = "forbid"
print_stderr = "forbid"
mem_forget = "forbid"
exit = "forbid"
# DENY — strict but #[expect()] allowed with justification
expect_used = "deny"
large_enum_variant = "deny"
result_large_err = "deny"
needless_pass_by_value = "deny"
redundant_closure_for_method_calls = "deny"
manual_let_else = "deny"
cloned_instead_of_copied = "deny"
implicit_clone = "deny"
# SemVer hygiene — warn-level so new pub types surface without forcing
# #[non_exhaustive] onto user-constructible data types (Point, PgInterval,
# Config, etc.) where it would itself be a breaking change.
exhaustive_enums = "warn"
exhaustive_structs = "warn"
# WARN — pedantic
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
# Pedantic allows — tighten incrementally
must_use_candidate = "allow"
return_self_not_must_use = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
unreadable_literal = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
items_after_statements = "allow"
redundant_else = "allow"
many_single_char_names = "allow"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
