[workspace]
resolver = "2"
members = [
    "crates/sentinel-driver",
    "crates/sentinel-derive",
]

[workspace.lints.clippy]
# FORBID — cannot be #[allow]'d
unwrap_used = "forbid"
dbg_macro = "forbid"
todo = "forbid"
unimplemented = "forbid"
print_stdout = "forbid"
print_stderr = "forbid"
mem_forget = "forbid"
exit = "forbid"
# DENY — strict but #[expect()] allowed with justification
expect_used = "deny"
large_enum_variant = "deny"
result_large_err = "deny"
needless_pass_by_value = "deny"
redundant_closure_for_method_calls = "deny"
manual_let_else = "deny"
cloned_instead_of_copied = "deny"
implicit_clone = "deny"
# SemVer hygiene — disabled because the 1.x line already exposes ~47 public
# data types (Point, PgInterval, PgMoney, Config, Oid, PgRange, PgTimeTz,
# PgXml, etc.) that users construct with struct literals. Blanket
# #[non_exhaustive] on all of them would be a massive ripple break; a
# warn-level setting would fire under CI's RUSTFLAGS=-Dwarnings. Revisit
# at v2: then every new pub type should carry #[non_exhaustive] from birth.
exhaustive_enums = "allow"
exhaustive_structs = "allow"
# WARN — pedantic
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
# Pedantic allows — tighten incrementally
must_use_candidate = "allow"
return_self_not_must_use = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
unreadable_literal = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
items_after_statements = "allow"
redundant_else = "allow"
many_single_char_names = "allow"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
