[package]
name = "sentinel-derive"
version = "0.1.0"
edition = "2021"
description = "Derive macros (FromRow, ToSql, FromSql) for sentinel-driver"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cntm-labs/sentinel-driver"
homepage = "https://github.com/cntm-labs/sentinel-driver"
keywords = ["postgresql", "derive", "database", "orm"]
categories = ["database"]
readme = "README.md"
rust-version = "1.75"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
